Add tag to documentation

--- a/app/flasgger_docs/add_service_token_endpoint.yml
+++ b/app/flasgger_docs/add_service_token_endpoint.yml
@@ -1,6 +1,8 @@
 Creating a new token for a user and returning the token id if the creation was
 successful.
 ---
+tags:
+  - Token
 parameters:
   - in: header
     name: Authorization
