--- a/app/flasgger_docs/register_endpoint.yml
+++ b/app/flasgger_docs/register_endpoint.yml
@@ -1,5 +1,7 @@
 Registering a new user and returning the user id if the creation was successful.
 ---
+tags:
+  - Register
 parameters:
   - in: body
     name: user
